--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@ Prazer a sua Parceira</h6>		</div>
 				<div class="elementor-element elementor-element-a00a679 elementor-align-center elementor-widget elementor-widget-button" data-id="a00a679" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://app.monetizze.com.br/checkout/KFE35443" target="_blank" class="elementor-button-link elementor-button elementor-size-lg" role="button">
+			<a href="https://app.monetizze.com.br/r/ATZ6288351?u=c&pl=LW48275" target="_blank" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Comprar agora</span>
 		</span>
