--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@ Prazer a sua Parceira</h6>		</div>
 				<div class="elementor-element elementor-element-76eaeb45 elementor-align-center elementor-widget elementor-widget-button" data-id="76eaeb45" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://app.monetizze.com.br/checkout/KTJ25743" target="_blank" class="elementor-button-link elementor-button elementor-size-lg" role="button">
+			<a href="https://app.monetizze.com.br/r/ATZ6288351?u=c&pl=UQ44797" target="_blank" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Comprar agora</span>
 		</span>
